[gd_scene load_steps=7 format=3 uid="uid://c56gn7yjsnsw4"]

[ext_resource type="Script" path="res://Game/MainScene.gd" id="1_7jh2u"]
[ext_resource type="Texture2D" uid="uid://cd042arow24w5" path="res://Assets/Background/background-image.jpg" id="2_4aqxu"]
[ext_resource type="Theme" uid="uid://co422u2sbopcm" path="res://Game/Themes/CountryButtonTheme.tres" id="3_vovhb"]
[ext_resource type="Theme" uid="uid://dgvc7jtgg5rfw" path="res://Game/Themes/LabelsTheme.tres" id="4_7vig2"]
[ext_resource type="Theme" uid="uid://5osc00qbyquo" path="res://Game/Themes/InfoLabels.tres" id="5_rks4m"]
[ext_resource type="Theme" uid="uid://bboupir43sxmy" path="res://Game/Themes/GamePlayButtons.tres" id="5_wslh2"]

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7jh2u")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.184314)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
texture = ExtResource("2_4aqxu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = -309.0
offset_right = 264.0
offset_bottom = -49.0
texture = ExtResource("2_4aqxu")
expand_mode = 1

[node name="Button" type="Button" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -29.0
offset_right = 179.0
offset_bottom = 51.0
theme = ExtResource("3_vovhb")
text = "One"

[node name="Button2" type="Button" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = 71.0
offset_right = 179.0
offset_bottom = 151.0
theme = ExtResource("3_vovhb")
text = "Two"

[node name="Button3" type="Button" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = 171.0
offset_right = 179.0
offset_bottom = 251.0
theme = ExtResource("3_vovhb")
text = "Three"

[node name="TimeLabel" type="Label" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -396.0
offset_top = -272.0
offset_right = -251.0
offset_bottom = -252.0
theme = ExtResource("4_7vig2")
text = "Time remaining: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsLabel" type="Label" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 304.0
offset_top = -272.0
offset_right = 384.0
offset_bottom = -223.0
theme = ExtResource("4_7vig2")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="RestartButton" type="Button" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -381.0
offset_top = -209.0
offset_right = -270.0
offset_bottom = -149.0
theme = ExtResource("5_wslh2")
text = "Restart"

[node name="QuitButton" type="Button" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -381.0
offset_top = -129.0
offset_right = -270.0
offset_bottom = -69.0
theme = ExtResource("5_wslh2")
text = "Quit"

[node name="InfoLabel" type="Label" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = 277.0
offset_right = 104.0
offset_bottom = 307.0
theme = ExtResource("5_rks4m")
text = "Maya 20 24"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayAgainYes" type="Button" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 325.0
offset_top = -69.0
offset_right = 367.0
offset_bottom = -39.0
theme = ExtResource("5_wslh2")
text = "Yes"

[node name="PlayAgainNo" type="Button" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 325.0
offset_top = -19.0
offset_right = 367.0
offset_bottom = 12.0
theme = ExtResource("5_wslh2")
text = "No"

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="MarginContainer/Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/Control/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="MarginContainer/Control/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="MarginContainer/Control/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/Control/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MarginContainer/Control/PlayAgainYes" to="." method="_on_play_again_yes_pressed"]
[connection signal="pressed" from="MarginContainer/Control/PlayAgainNo" to="." method="_on_play_again_no_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
